--- a/new-pack.html
+++ b/new-pack.html
@@ -45,7 +45,7 @@
 			<!-- NEW BACK LINK -->
             
             <div class="back-link-container">
-                <a href="#" class="back-link">
+                <a href="shop.html" class="back-link">
                     <img class="back-link-arrow" src="assets/images/back-arrow.svg">
                     Voltar à loja online
                 </a>
