Add allergens improvements

--- a/beers/pilsener.html
+++ b/beers/pilsener.html
@@ -128,6 +128,7 @@
               <div class="beer-description-col col-12 col-md-8 col-lg-4 offset-lg-3">
                 <h5 class="beer-description">De cor levemente dourada, distingue-se pelo aroma suave a lúpulo.</h5>
                 <h5 class="beer-ingredients">Ingredientes</h5>
+                <small class="o-40 beer-allergenic">Contém alergénios. Contém glúten.</small>
                 <div class="beer-ingredient-container">
                   <p>
                     <img src="../assets/images/water-vector.svg">
