--- a/restaurant.html
+++ b/restaurant.html
@@ -118,6 +118,21 @@
             <h2 class="invert">Restaurante</h2>
           </div>
         </section>
+
+        <section class="takeaway-section">
+          <div class="row takeaway-wrapper">
+            <div class="col-sm-12 col-lg-5 col-xl-4">
+              <h3 class="takeaway-title">Takeaway</h3>
+              <a href="https://bit.ly/CTASitePraxisEncomendasRestaurante" target="_blank" class="button light">Encomendar</a>
+            </div>
+            <div class="col-sm-10 col-lg-6 offset-lg-1">
+              <h5 class="mb-30">De Quarta a Domingo (almoço e jantar).</h5>
+              <h5 class="mb-30">Até às 10h e 17h do próprio dia para almoço e jantar, respetivamente.</h5>
+              <h5 class="mb-30">Entregas numa distância de 5km.</h5>
+              <h5 class="mb-30">Ligue para o 239 440 207 para fazer a sua encomenda.</h5>
+            </div>
+          </div>
+        </section>
         
         <section class="dark-section menu-section db-title-section">
           <img class="bg-texture o-60" src="assets/images/restaurant-vector-texture.png" alt="Seeds Background">
@@ -190,6 +205,7 @@
                     </div>
                     <p class="menu-dish-ingredients">Serrano ham, spinach, roasted red peppers, tomato, pil pil sauce</p>
                   </div>
+                  <p class="menu-dish-allergens">*Todos os nossos produtos contém produtos <a href="allergens.html" class="inline-link">alergénios</a>.</p>
                 </div>
 
                 <!--<div class="menu-actions">
@@ -206,21 +222,6 @@
                     <img class="plate-img" id="rot-plate" src="assets/images/restaurant-plate-lg.png">
                   </div>
                 </div>
-            </div>
-          </div>
-        </section>
-
-        <section class="takeaway-section">
-          <div class="row takeaway-wrapper">
-            <div class="col-sm-12 col-lg-5 col-xl-4">
-              <h3 class="takeaway-title">Takeaway</h3>
-              <a href="tel:+351911922162" class="button light">Encomendar</a>
-            </div>
-            <div class="col-sm-10 col-lg-6 offset-lg-1">
-              <h5 class="mb-30">De Quarta a Domingo (almoço e jantar).</h5>
-              <h5 class="mb-30">Até às 10h e 17h do próprio dia para almoço e jantar, respetivamente.</h5>
-              <h5 class="mb-30">Entregas numa distância de 5km.</h5>
-              <h5 class="mb-30">Ligue para o 239 440 207 para fazer a sua encomenda.</h5>
             </div>
           </div>
         </section>
