--- a/restaurant.html
+++ b/restaurant.html
@@ -205,7 +205,7 @@
                     </div>
                     <p class="menu-dish-ingredients">Serrano ham, spinach, roasted red peppers, tomato, pil pil sauce</p>
                   </div>
-                  <p class="menu-dish-allergens">*Todos os nossos produtos contém produtos <a href="allergens.html" class="inline-link">alergénios</a>.</p>
+                  <p class="menu-dish-allergens">*Todos os nossos produtos contém produtos <a href="allergens.html" class="inline-link">alergénicos</a>.</p>
                 </div>
 
                 <!--<div class="menu-actions">
